fix: font size not propagating to dark mode

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,5 +25,4 @@ body.dark-mode {
     --input-bg: #2d2d2d;
     --input-border: #404040;
     --hljs-bg: #1e1e1e;
-    --base-font-size: 16px;
 }
